# selfea

./: .travis.yml  CMakeLists.txt  README.rst
examples/: CMakeLists.txt  example1.cpp
include/selfea/: config.hpp.in
include/selfea/material/: isotropic.hpp  material.hpp
include/selfea/math/: matrix.hpp
include/selfea/model/: model.hpp  node.hpp
src/: CMakeLists.txt
src/material/: CMakeLists.txt  isotropic.cpp  material.cpp
src/math/: CMakeLists.txt  matrix.cpp
src/model/: CMakeLists.txt  model.cpp  node.cpp
test/: CMakeLists.txt
test/material/: CMakeLists.txt  test_isotropic.cpp  test_material.cpp
test/math/: CMakeLists.txt  test_matrix.cpp
test/model/: CMakeLists.txt  test_model.cpp  test_node.cpp
